# Crush-Synaps

./: .gitignore  Cargo.toml  README.md  RESULTS.md  REVIEW.md  SPEC-tool-aware.md  SPEC.md  measure.py  smoke.sh  stress.py  stress2.py
.synaps-plugin/: plugin.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compress.rs  run.rs  unfold.rs
src/: compress.rs  lib.rs  main.rs  markers.rs  protocol.rs  stats.rs
src/transforms/: columnar.rs  mod.rs  schema.rs  tabular.rs  text.rs
tests/fixtures/: build_verbose.txt  cargo_metadata.json  git_log.txt  json_array.json  ls_bin.txt  ls_lah.txt  ps_aux.txt
