[package]
name = "crush"
version = "0.1.0"
edition = "2021"
description = "Native tool-output compressor for Synaps — a process extension that rewrites large tool output before it enters conversation history. Replaces headroom-bridge."
authors = ["Jawz"]

[[bin]]
name = "crush"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
